# lilac

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lilac.cpp  lilac.h  lilac.json  lilac.kcfg  lilacanimationmanager.cpp  lilacanimationmanager.h  lilacsettings.kcfgc  lilacstyle.cpp  lilacstyle.h  lilacstyleplugin.cpp  lilacstyleplugin.h  orchid.cpp  orchid.h  orchidstyle.cpp  orchidstyle.h  orchidstyleplugin.cpp  readme.txt  settings.kcfgc
settings/: README.md  lilac.themerc  lilacsettingsapp.cpp  lilacsettingsapp.h  lilacsettingsapp.ui  main.cpp
src/: animation_manager.cpp  animation_manager.h  blur_manager.cpp  blur_manager.h  colors.cpp  colors.h  config.cpp  config.h  settings.kcfg  style.cpp  style.h  style_plugin.cpp  style_plugin.h  utils.cpp  utils.h  window_manager.cpp  window_manager.h
src/settings/: README.md  main.cpp  settings_app.cpp  settings_app.h  settings_app.ui
src/utils/: slider_focus_frame.cpp  slider_focus_frame.h  state.h
